[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "livekit-plugins-dtln"
version = "0.1.0"
description = "DTLN noise suppression plugin for LiveKit Agents"
requires-python = ">=3.10"
dependencies = [
    "livekit>=1.1.0",
    "livekit-agents>=1.4.4",
    "onnxruntime>=1.17.0",
    "numpy>=1.26.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"livekit.plugins.dtln" = ["models/*.onnx"]
